--- a/src/app/estimate/stepper-component/stepper-component.component.css
+++ b/src/app/estimate/stepper-component/stepper-component.component.css
@@ -1,3 +1,22 @@
+/* .mat-step-header .mat-step-icon-done {
+ 
+} */
+.mat-step-header .mat-step-icon {
+  background-color: #e6ecf1;
+}
+
+.mat-step-header .mat-step-icon-selected,
+.mat-step-header .mat-step-icon-state-done,
+.mat-step-header .mat-step-icon-state-edit.mat-horizontal-stepper-header .mat-step-icon {
+  /* background-color: rgb(231, 235, 233); */
+  background-color: rgba(0, 200, 83, 0.4);
+}
+
+.mat-step-header .mat-step-icon-selected {
+  background-color: rgb(0, 200, 83);
+  margin-right: 0px;
+}
+
 @media (min-width:300px) and (max-width: 599px) {
   .headline>h4 {
     margin: 8px 0 0 0;
@@ -29,6 +48,7 @@
     max-width: 550px;
     margin: 10px auto;
   }
+
   .buttons-container {
     /* border: 1px solid white; */
     display: flex;
@@ -41,14 +61,14 @@
     /* position: fixed; */
     max-width: 550px;
     margin: 10px auto;
-    
-  
-  
+
+
+
   }
-  
-  .button{
+
+  .button {
     min-width: 100px;
-    margin:0;
+    margin: 0;
   }
 }
 
@@ -66,6 +86,7 @@
     align-items: center;
     padding: 0 10px;
   }
+
   .buttons-container {
     /* border: 1px solid white; */
     display: flex;
@@ -78,7 +99,7 @@
     /* position: fixed; */
     max-width: 550px;
     margin: 10px auto;
-  
+
   }
 
 }
