--- a/src/styles.css
+++ b/src/styles.css
@@ -69,13 +69,13 @@ body {
     caret-color: #069e38;
 }
 
-.mat-step-header .mat-step-icon-selected,
-.mat-step-header .mat-step-icon-state-done,
+
+
+
+/* .mat-step-header .mat-step-icon-state-done,
 .mat-step-header .mat-step-icon-state-edit {
-    /* background-color: #88CF2A; */
-    background-color: rgb(0, 200, 83);
-    margin-right: 0px;
-}
+    background-color: red;
+} */
 
 .mat-horizontal-stepper-header {
     height: 45px;
